[tool.poetry]
name = "shortify"
version = "0.0.8"
description = "Shortify is a URL shortener RESTful API built with Python and FastAPI."
authors = ["Iliya <IHosseini083@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/IHosseini/Shortify"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.85.0"}
beanie = "^1.11.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
autoflake = "^1.5.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/IHosseini/Shortify/issues"

[tool.isort]
profile = "black"
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
